2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_QuoteLine__c/fields/Ext_Price_tmp__c.field-meta.xml
<CustomField>
    <fullName>Ext_Price_tmp__c</fullName>
    <description>This field is only used by the edit lines visualforce controller, should not be displayed on any page</description>
    <label>Ext_Price_tmp</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>