2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_QuoteLine__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>R00N30000001RfDEEA0</relationshipName>
    <type>Lookup</type>
</CustomField>