2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_QuoteLine__c/validationRules/Valid_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>Sales_Discount__c &gt;0.95</errorConditionFormula>
    <errorDisplayField>Sales_Discount__c</errorDisplayField>
    <errorMessage>Discount percent may not exceed 95%</errorMessage>
</ValidationRule>